--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MenuHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
   </ItemGroup>
   <ItemGroup>
