--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -46,7 +46,8 @@
     <Compile Include="Entities\Vehicle.cs" />
     <Compile Include="GarageHandler.cs" />
     <Compile Include="MenuHandler.cs" />
-    <Compile Include="MenyCommand.cs" />
+    <Compile Include="MenuCommand.cs" />
+    <Compile Include="Msg.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LimitedList.cs" />
