--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -48,15 +48,23 @@
     <Compile Include="LangHandler.cs" />
     <Compile Include="MenuHandler.cs" />
     <Compile Include="MenuCommand.cs" />
-    <Compile Include="Msg.cs" />
+    <Compile Include="MessageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
+    <Compile Include="Examples\AdrianExampleVehicleFactory.cs" />
+    <Compile Include="Entities\VehicleFactory.cs" />
+    <Compile Include="Entities\VehicleEnum.cs" />
+    <Compile Include="Entities\FuelType.cs" />
+    <Compile Include="Entities\BoatType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Examples\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
