--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
+    <Compile Include="VehicleFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
