--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -1,5 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿Skip to content
+This repository
+Search
+Pull requests
+Issues
+Marketplace
+Explore
+ @rolfbb
+Sign out
+1
+0 0 rolfbb/Ovning_Garage10
+ Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
+Ovning_Garage10/Ovning_Garage10/Ovning_Garage10.csproj
+4af912d  3 hours ago
+@rolfbb rolfbb Misc changes, menu handling etc
+     
+70 lines (70 sloc)  2.98 KB
+<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -48,16 +65,36 @@
     <Compile Include="LangHandler.cs" />
     <Compile Include="MenuHandler.cs" />
     <Compile Include="MenuCommand.cs" />
-    <Compile Include="Msg.cs" />
+    <Compile Include="MessageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
-    <Compile Include="VehicleFactory.cs" />
+    <Compile Include="Examples\AdrianExampleVehicleFactory.cs" />
+    <Compile Include="Entities\VehicleFactory.cs" />
+    <Compile Include="Entities\VehicleEnum.cs" />
+    <Compile Include="Entities\FuelType.cs" />
+    <Compile Include="Entities\BoatType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Examples\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
+Press h to open a hovercard with more details.
