* .DS_Store: Implementation of VehicleFactory. Problems with recognizing the VehicleFactory class. Renamed it to VehicleFactory2; will create a new class/file.
* .DS_Store:
* GarageHandler.cs:
* MessageHandler.cs:
* Garage.cs:
* Vehicle.cs:
* Ovning_Garage10.csproj:
* VehicleFactory.cs:
* VehicleFactory2.cs:
* VehiclePropertiesEnum.cs:

--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -54,10 +54,11 @@
     <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
     <Compile Include="Examples\AdrianExampleVehicleFactory.cs" />
-    <Compile Include="Entities\VehicleFactory.cs" />
+    <Compile Include="Entities\VehicleFactory2.cs" />
     <Compile Include="Entities\VehicleEnum.cs" />
     <Compile Include="Entities\FuelType.cs" />
     <Compile Include="Entities\BoatType.cs" />
+    <Compile Include="Entities\VehiclePropertiesEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
