--- a/Ovning_Garage10/Ovning_Garage10.csproj
+++ b/Ovning_Garage10/Ovning_Garage10.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Utilities\LimitedList.cs" />
     <Compile Include="Utilities\UI.cs" />
     <Compile Include="Examples\AdrianExampleVehicleFactory.cs" />
-    <Compile Include="Entities\VehicleFactory2.cs" />
+    <Compile Include="Entities\VehicleFactory.cs" />
     <Compile Include="Entities\VehicleEnum.cs" />
     <Compile Include="Entities\FuelType.cs" />
     <Compile Include="Entities\BoatType.cs" />
